[metadata]
name = djangoloco
version = 1.0
description = A simple management command to get translations from localise.biz (Loco) for your django app.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thisfro/djangoloco
author = Jannis Portmann
author_email = jannis@thisfro.ch
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0
